--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@nodestrap/toggler-menu-button",
-  "version": "4.0.1",
+  "version": "4.0.2",
   "description": "A toggleable button for showing/hiding menu in Navbar.",
   "type": "module",
-  "main": "dist/TogglerMenuButton.jsx",
+  "main": "dist/TogglerMenuButton.js",
   "types": "dist/TogglerMenuButton.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -36,14 +36,14 @@
     "@cssfn/css-var": "^1.0.2",
     "@cssfn/cssfn": "^1.0.3",
     "@cssfn/react-cssfn": "^1.0.3",
-    "@nodestrap/accessibilities": "^4.0.1",
-    "@nodestrap/action-control": "^4.0.2",
-    "@nodestrap/basic": "^4.0.2",
-    "@nodestrap/check": "^4.0.1",
-    "@nodestrap/control": "^4.0.2",
-    "@nodestrap/indicator": "^4.0.2",
+    "@nodestrap/accessibilities": "^4.0.2",
+    "@nodestrap/action-control": "^4.0.3",
+    "@nodestrap/basic": "^4.0.3",
+    "@nodestrap/check": "^4.0.2",
+    "@nodestrap/control": "^4.0.3",
+    "@nodestrap/indicator": "^4.0.3",
     "@nodestrap/typos": "^4.0.0",
-    "@types/react": "^17.0.36",
+    "@types/react": "^17.0.37",
     "react": "^17.0.2"
   }
 }
